--- a/01 - Lógica de programação I os primeiros programas com Javascript e HTML/21imc_retornando_condicao/imc_condicao.html
+++ b/01 - Lógica de programação I os primeiros programas com Javascript e HTML/21imc_retornando_condicao/imc_condicao.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcula IMC interativo</title>
+    <title>Condição IMC</title>
 </head>
+
 <body>
-
     <script>
-        function pulaLinha(){
+        function pulaLinha() {
             document.write("<br>")
-        } 
+        }
 
-        function mostra(mensagem){
+        function mostra(mensagem) {
             document.write(mensagem);
         }
 
-        function calculaIMC(peso, altura){
+        function calculaIMC(peso, altura) {
             let imc = peso / (altura * altura)
-            return Math.round(imc);            
-        }        
+            return Math.round(imc);
+        }
 
-        function entradaDeDadoUsuario(){
+        function faixaIMC(imc) {
+            if (imc < 18.5) {
+                mostra("Seu IMC está abaixo da média!")
+            } else if (imc > 35) {
+                mostra("Seu IMC está acima da média!")
+            } else {
+                mostra("Seu IMC esta dentro da média recomendada!")
+            }
+        }
+
+        function entradaDeDadoUsuario() {
             var nome = prompt("Informe o seu nome: ");
             var peso = prompt(nome + " informe o seu peso: ");
             var altura = prompt(nome + " informe a sua altura: ");
             var imc = calculaIMC(peso, altura);
             mostra("<h2>" + nome + ", o seu IMC é " + imc + "</h2>");
-            
+            faixaIMC(imc);
         }
 
         entradaDeDadoUsuario();
@@ -37,6 +48,7 @@
 
 
     </script>
-    
+
 </body>
+
 </html>
