created_fracao.html

--- a/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/06funcao_circulo/uma_inofensiva_flor.html
+++ b/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/06funcao_circulo/uma_inofensiva_flor.html
@@ -87,6 +87,7 @@
         desenhaFlor(200, 150, 'Orange', 'Purple', 'Blue')
         desenhaFlor(360, 100, 'purple', 'yellow', 'beige')
         desenhaFlor(450, 320, 'Red', 'Purple', 'orange')
+        desenhaFlor(500, 100, 'orange','yellow', 'purple')
 
     </script>
 
