--- a/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/09funtion_desenha_esquadro/function_desenha_esquadro.html
+++ b/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/09funtion_desenha_esquadro/function_desenha_esquadro.html
@@ -35,6 +35,23 @@
             pincel.fill()
         }
 
+        function desenhaEsquadro2(xa, ya, xc, yc, cor) {
+            pincel.fillStyle = cor
+            pincel.beginPath();
+            pincel.moveTo(xa, ya);
+            pincel.lineTo(xa, yc);
+            pincel.lineTo(xc, yc);
+            pincel.fill();
+
+            pincel.fillStyle = 'white'
+            pincel.beginPath();
+            pincel.moveTo((6 * xa + xc) / 7, (9 * ya + 5 * yc) / 14);
+            pincel.lineTo((6 * xa + xc) / 7, (ya + 6 * yc) / 7);
+            pincel.lineTo((5 * xa + 9 * xc) / 14, (ya + 6 * yc) / 7);
+            pincel.fill();
+
+        }
+
         var tela = document.querySelector('canvas');
         var pincel = tela.getContext('2d');
         //fundo tela
@@ -42,6 +59,8 @@
         pincel.fillRect(0, 0, 600, 400);
 
         desenhaEsquadro(50, 25, 400, 375, 'red')
+
+        desenhaEsquadro2(400,50,550,200,'black')
 
         //var cor = 'black';
         //var xa = 50
