--- a/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/09funtion_desenha_esquadro/function_desenha_esquadro.html
+++ b/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/09funtion_desenha_esquadro/function_desenha_esquadro.html
@@ -36,6 +36,7 @@
         }
 
         function desenhaEsquadro2(xa, ya, xc, yc, cor) {
+            //solução proposta
             pincel.fillStyle = cor
             pincel.beginPath();
             pincel.moveTo(xa, ya);
@@ -59,7 +60,6 @@
         pincel.fillRect(0, 0, 600, 400);
 
         desenhaEsquadro(50, 25, 400, 375, 'red')
-
         desenhaEsquadro2(400,50,550,200,'black')
 
         //var cor = 'black';
@@ -81,10 +81,6 @@
         //pincel.lineTo(xa * 2, yc - 50);
         //pincel.lineTo(xc - 125, yc - 50);
         //pincel.fill()
-
-
-
-
     </script>
 
 </body>
