--- a/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/12trocando_cor_da_bolinha/trocando_cor.html
+++ b/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/12trocando_cor_da_bolinha/trocando_cor.html
@@ -35,7 +35,7 @@
         function mudaCor() {
             alert('Funcionou!');
             corSelecionada++
-            if (corSelecionada>=3) {
+            if (corSelecionada>=cor.length) {
                 corSelecionada=0
             }
             pincel.fillStyle = cor[corSelecionada];
