--- a/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/14desenhando_com_mouse/desenh_c_mouse_funcao_anonima.html
+++ b/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/14desenhando_com_mouse/desenh_c_mouse_funcao_anonima.html
@@ -11,6 +11,7 @@
 <body>
 
     <canvas width="600" height="400"></canvas>
+    <input type="color" name="" id="">
 
     <script>
         var tela = document.querySelector('canvas');
@@ -20,15 +21,17 @@
         pincel.fillRect(0, 0, 600, 400);
 
         var desenha = false;
-
+        
         // atribuindo diretamente a função anônima
         //onmousemove->enquanto o mouse mexer
         tela.onmousemove = function (evento) {
-
+            
             if (desenha) {
+                var cor = document.querySelector('input')
+                console.log(cor.value)
                 var x = evento.pageX - tela.offsetLeft;
                 var y = evento.pageY - tela.offsetTop;
-                pincel.fillStyle = 'blue';
+                pincel.fillStyle = cor.value;
                 pincel.beginPath();
                 pincel.arc(x, y, 10, 0, 2 * 3.14);
                 pincel.fill();
@@ -49,6 +52,7 @@
 
             desenha = false;
         }
+
 
     </script>
 
