--- a/18trocando_bandeiras/trocando_bandeiras.html
+++ b/18trocando_bandeiras/trocando_bandeiras.html
@@ -60,7 +60,7 @@
             pincel.fillRect(0, 266, 600, 133);
         }
 
-        function limpaTela() {            
+        function limpaTela() {
             pincel.clearRect(0, 0, 600, 400);
         }
 
@@ -70,12 +70,22 @@
             if (mostraBandeira01 == true) {
                 desenhaBandeiraBrasil()
                 mostraBandeira01 = false
-            }else{
+            } else {
                 desenhaBandeiraAlemanha()
                 mostraBandeira01 = true
             }
 
         }
+        //var mostraBrasil = true;
+        //function atualizaTela() {
+        //
+        //    if (mostraBrasil) {
+        //        desenhaBandeiraBrasil();
+        //    } else {
+        //        desenhaBandeiraAlemanha();
+        //    }
+        //    mostraBrasil = !mostraBrasil;
+        //}
 
         setInterval(atualizaTela, 3000);
 
