--- a/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/20desenhando_obra_arte/obra_de_arte.html
+++ b/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/20desenhando_obra_arte/obra_de_arte.html
@@ -40,17 +40,6 @@
 
         }
 
-        function lidaComMovimentoDoMouse(evento) {
-
-            var x = evento.pageX - tela.offsetLeft;
-            var y = evento.pageY - tela.offsetTop;
-
-            if (desenha) {
-
-                desenhaCirculo(x, y, 5, corAtual);
-            }
-        }
-
         function habilitaDesenhar() {
 
             desenha = true;
@@ -60,6 +49,26 @@
 
             desenha = false;
         }
+
+        function lidaComMovimentoDoMouse(evento) {
+
+            var x = evento.pageX - tela.offsetLeft;
+            var y = evento.pageY - tela.offsetTop;
+
+            if (x >= 0 && x <= 50 && y >= 0 && y <= 50) {
+                corAtual = 'red';
+            } else if (x > 50 && x <= 100 && y >= 0 && y <= 50) {
+                corAtual = 'green';
+            } else if (x > 100 && x <= 150 && y >= 0 && y <= 50) {
+                corAtual = 'blue';
+            }
+
+            if (y > 50 && desenha) {
+
+                desenhaCirculo(x, y, 5, corAtual);
+            }
+        }
+
 
         var tela = document.querySelector('canvas');
         var pincel = tela.getContext('2d');
