--- a/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/20desenhando_obra_arte/solucao_suposta.html
+++ b/02 - Lógica de programação 2 pratique com desenhos, animações e um jogo/20desenhando_obra_arte/solucao_suposta.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desenhe obras de arte</title>
+    <title>Solução suposta a obra de arte</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 
         function desenhaCirculo(x, y, raio, cor) {
 
-            pincel.fillStyle = cor;
+            pincel.fillStyle = cor; // o padrão é blue
             pincel.beginPath();
             pincel.arc(x, y, raio, 0, 2 * 3.14);
             pincel.fill();
@@ -40,6 +40,18 @@
 
         }
 
+        function lidaComMovimentoDoMouse(evento) {
+
+            var x = evento.pageX - tela.offsetLeft;
+            var y = evento.pageY - tela.offsetTop;
+
+            // usando a nova função 
+            if (desenha && podeDesenharNaArea(x, y)) {
+
+                desenhaCirculo(x, y, 5, corAtual);
+            }
+        }
+
         function habilitaDesenhar() {
 
             desenha = true;
@@ -50,25 +62,39 @@
             desenha = false;
         }
 
-        function lidaComMovimentoDoMouse(evento) {
+        function podeDesenharNaArea(x, y) {
+
+            if (x >= 0 && x < 3 * tamanhoQuadrados && y >= 0 && y < tamanhoQuadrados) {
+                return false;
+            } else {
+                return true;
+            }
+        }
+
+        function selecionaCor(evento) {
 
             var x = evento.pageX - tela.offsetLeft;
             var y = evento.pageY - tela.offsetTop;
 
-            if (x >= 0 && x <= 50 && y >= 0 && y <= 50) {
-                corAtual = 'red';
-            } else if (x > 50 && x <= 100 && y >= 0 && y <= 50) {
-                corAtual = 'green';
-            } else if (x > 100 && x <= 150 && y >= 0 && y <= 50) {
-                corAtual = 'blue';
-            }
+            // cada condição muda a variável `corAtual`
 
-            if ((y > 50 || x > 150) && desenha) {
+            // começamos pela condição do y que é igual em todos os casos
+            if (y > yQuadrados && y < yQuadrados + tamanhoQuadrados) {
 
-                desenhaCirculo(x, y, 5, corAtual);
+                if (x > xVermelho && x < xVermelho + tamanhoQuadrados) {
+
+                    corAtual = 'red';
+
+                } else if (x > xVerde && x < xVerde + tamanhoQuadrados) {
+
+                    corAtual = 'green';
+
+                } else if (x > xAzul && x < xAzul + tamanhoQuadrados) {
+
+                    corAtual = 'blue';
+                }
             }
         }
-
 
         var tela = document.querySelector('canvas');
         var pincel = tela.getContext('2d');
@@ -83,13 +109,15 @@
         var yQuadrados = 0;
         var tamanhoQuadrados = 50;
 
-        desenhaPaletaDeCores(); // mostra os quadrados de seleção de cores
+        desenhaPaletaDeCores();
 
         tela.onmousemove = lidaComMovimentoDoMouse;
 
         tela.onmousedown = habilitaDesenhar;
 
         tela.onmouseup = desabilitaDesenhar;
+
+        tela.onclick = selecionaCor;
 
     </script>
 
