--- a/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/produtos.html
+++ b/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/produtos.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="produtos.css">
     <title>Produtos - Barbearia Alura</title>
 </head>
+
 <body>
     <header>
         <img><img src="logo.png"></h1>
 
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="produtos.html">Produtos</a></li>
-            <li><a href="contato.html">Contatos</a></li>
-        </ul>
+        <nav>
+            <ul class="navegacao">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="contato.html">Contatos</a></li>
+            </ul>
+        </nav>
+
     </header>
-    
-    
+
+
 </body>
+
 </html>
