--- a/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/produtos.html
+++ b/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/produtos.html
@@ -12,15 +12,17 @@
 
 <body>
     <header>
-        <img><img src="logo.png"></h1>
+        <div class="caixa">
+            <img><img src="logo.png"></h1>
 
-        <nav>
-            <ul class="navegacao">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="contato.html">Contatos</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul class="navegacao">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contatos</a></li>
+                </ul>
+            </nav>
+        </div>
 
     </header>
 
