--- a/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/produtos.html
+++ b/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/produtos.html
@@ -53,6 +53,11 @@
 
     </main>
 
+    <footer>
+        <img src="logo-branco.png" alt="">
+        <p class="copyrigth">&copy; Copyright Barbearia Alura</p>
+    </footer>
+
 
 </body>
 
