--- a/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/index.html
+++ b/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/index.html
@@ -2,13 +2,14 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>Barbearia Alura</title>
-		<link rel="stylesheet" href="style.css">
+		<title>Barbearia Alura</title>    	
+		<link rel="stylesheet" href="style-home.css">
 	</head>
 
 	<body>
 		<header>
 			<h1 class="titulo-principal">Barbearia Alura</h1>
+			
 		</header>
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
