--- a/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/produtos.html
+++ b/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/produtos.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="caixa">
-            <img><img src="logo.png"></h1>
+            <img><img src="logo.png"  alt="Logo da Barbearia Alura">
 
             <nav>
                 <ul class="navegacao">
@@ -54,7 +54,7 @@
     </main>
 
     <footer>
-        <img src="logo-branco.png" alt="">
+        <img src="logo-branco.png"  alt="Logo da Barbearia Alura">
         <p class="copyrigth">&copy; Copyright Barbearia Alura</p>
     </footer>
 
