--- a/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/contato.html
+++ b/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/contato.html
@@ -75,6 +75,33 @@
         </form>
     </main>
 
+    <table>
+        <thead>
+            <tr>
+                <td colspan="5">Rio de Janeiro</td> 
+            </tr>
+            <tr>
+                <th>Dia</th>
+                <th>Horário</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Segunda</td>
+                <td>8hr ~ 20hr</td>
+            </tr>
+            <tr>
+                <td>Quarta</td>
+                <td>8hr ~ 20hr</td>
+            </tr>
+            <tr>
+                <td>Sexta</td>
+                <td>8hr ~ 20hr</td>
+            </tr>
+        </tbody>
+    </table>
+
+
     <footer>
         <img src="logo-branco.png"  alt="Logo da Barbearia Alura">
         <p class="copyrigth">&copy; Copyright Barbearia Alura</p>
