--- a/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/index.html
+++ b/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/index.html
@@ -1,38 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<title>Barbearia Alura</title>    	
-		<link rel="stylesheet" href="style-home.css">
-	</head>
 
-	<body>
-		<header>
-			<h1 class="titulo-principal">Barbearia Alura</h1>
-			
-		</header>
-		<img id="banner" src="banner.jpg">
-		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
-	 
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+<head>
+	<meta charset="UTF-8">
+	<title>Barbearia Alura</title>
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="style.css">
+</head>
 
+<body>
+	<header>
+        <div class="caixa">
+            <img><img src="logo.png"  alt="Logo da Barbearia Alura">
+
+            <nav>
+                <ul class="navegacao">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contatos</a></li>
+                </ul>
+            </nav>
+        </div>
+
+    </header>
+
+	<img class="banner" src="banner.jpg">
+
+	<main>
+
+		<section class="principal">
+			<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+
+			<img class="utencilios" src="utensilios.jpg" alt="imagem de utencilios de um barbeiro.">
+	
+			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
+				para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
+				clientes a cada dia.</p>
+	
 			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
-
+	
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-		</div>
 
-		<div class="beneficios">
-			<h3 class="titulo-centralizado">Benefícios</h3>
-
+		</section>
+	
+		<section class="beneficios">
+			
+			<h3 class="titulo-principal">Benefícios</h3>	
+	
 			<ul>
 				<li class="itens">Atendimento aos Clientes</li>
 				<li class="itens">Espaço diferenciado</li>
 				<li class="itens">Localização</li>
 				<li class="itens">Profissionais Qualificados</li>
 			</ul>
-
+	
 			<img src="beneficios.jpg" class="imagembeneficios">
-		</div>
-	</body>
+		</section>
+
+	</main>
+
+	<footer>
+        <img src="logo-branco.png"  alt="Logo da Barbearia Alura">
+        <p class="copyrigth">&copy; Copyright Barbearia Alura</p>
+    </footer>
+</body>
+
 </html>
