--- a/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/index.html
+++ b/04 - HTML5_e_CSS3_parte_2_posicionamento_listas_e_navegacao/Barbearia_Alura/index.html
@@ -13,7 +13,7 @@
 <body>
 	<header>
 		<div class="caixa">
-			<img><img src="logo.png" alt="Logo da Barbearia Alura">
+			<img src="logo.png" alt="Logo da Barbearia Alura">
 
 			<nav>
 				<ul class="navegacao">
