--- a/05 - JavaScript programando na linguagem da web/00AparecidaNutricao/index.html
+++ b/05 - JavaScript programando na linguagem da web/00AparecidaNutricao/index.html
@@ -12,12 +12,12 @@
 
 		<header>
 			<div class="container">
-				<h1>Aparecida Nutrição</h1>
+				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
 			<section class="container">
-				<h2>Meus pacientes</h2>
+				<h2 class="nome-da-tabela">Meus pacientes</h2>
 				<table>
 					<thead>
 						<tr>
@@ -29,7 +29,7 @@
 						</tr>
 					</thead>
 					<tbody id="tabela-pacientes">
-						<tr class="paciente" >
+						<tr class="paciente" id="primeiro-paciente" >
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
@@ -73,5 +73,6 @@
 			</section>
 		</main>
 
+		<script src="js/principal.js"></script>
 	</body>
 </html>
